# rust-trend

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  json  response.json
.github/workflows/: doc.yml  main.yml  rust-clippy.yml  security.yml
examples/: filter.rs  region_interest.rs  related_queries.rs  related_topics.rs  search_interest.rs  select_keyword.rs  simple.rs
src/: category.rs  client.rs  client_async.rs  cookie.rs  country.rs  endpoint.rs  keywords.rs  lang.rs  lib.rs  locale.rs  main.rs  period.rs  property.rs  query_builder.rs  region_interest.rs  related_queries.rs  related_topics.rs  request_builder.rs  request_handler.rs  request_url.rs  search_interest.rs  token.rs  uri.rs  utils.rs
src/errors/: errors.rs  mod.rs
